feat: import Sarabun font

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Trirong" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sarabun:300,400,500" rel="stylesheet">
 </head>
 <body>
   <smcu-root></smcu-root>
