--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ระบบสารบรรณ สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย</title>
-  <base href="/">
-  <meta name="theme-color" content="#4caf50"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sarabun:300,400,500" rel="stylesheet">
-</head>
-<body>
-  <smcu-root></smcu-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>ระบบสารบรรณ สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย</title>
+    <base href="/" />
+    <meta name="theme-color" content="#4caf50" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Sarabun:300,400,500" rel="stylesheet" />
+  </head>
+  <body>
+    <smcu-root></smcu-root>
+  </body>
 </html>
